# FoundationPose

./: .gitignore  CMakeLists.txt  LICENSE  Utils.py  beaker_250ml.usd  build_all.sh  build_all_conda.sh  conical_flask_500mL.usd  datar.py  datareader.py  estimater.py  eval.py  fp_wrap.py  index.html  mask_generater.py  metadata.csv  offscreen_renderer.py  package.xml  perception_eval.py  prep.py  readme.md  renaming.py  requirements.txt  run_demo.py  run_linemod.py  run_organa.py  run_ycb_video.py  segmentation.py  segmentation2.py  segmentation3.py  setup.py  show.py
FoundationPose_ROS/: LICENSE  Utils.py  datareader.py  estimater.py  readme.md  requirements.txt  run_ROS.py
FoundationPose_ROS/bundlesdf/: config_ycbv.yml  nerf_runner.py  tool.py
FoundationPose_ROS/docker/: dockerfile  run_container.sh  run_container_new_env.sh
FoundationPose_ROS/mesh/: annotate_keypoints.py
FoundationPose_ROS/outputs/: init_center.ply  material.mtl
FoundationPose_ROS/test_scripts/: viewobj.py  viewply.py
Grounded-Segment-Anything/: Dockerfile  Makefile  grounded_sam_demo.py  ros_gsam.py  run_gsa_ros.sh
Grounded-Segment-Anything/model_outputs/: mask.json
bundlesdf/: config_ycbv.yml  nerf_helpers.py  nerf_runner.py  run_nerf.py
bundlesdf/mycuda/: common.cu  common.h  setup.py
docker/: compose.yaml  dockerfile  run_container.sh
docker-compose/: compose.yaml  dockerfile  dockerfile.prod  readme.md
learning/datasets/: h5_dataset.py
learning/training/: predict_pose_refine.py  predict_score.py
mycpp/: CMakeLists.txt
src/pose_estimation/mycpp/: CMakeLists.txt
(+1242 files in other folders)
